--- a/web/index.html
+++ b/web/index.html
@@ -10,6 +10,8 @@
 
 <body>
     <div class="container">
+
+        <h1>BIBYDEX</h1>
         <!--    Made by Erik Terwan    -->
         <!--   24th of November 2015   -->
         <!--        MIT License        -->
@@ -37,19 +39,16 @@
     -->
                 <ul id="menu">
                     <a href="#">
-                        <li>Home</li>
+                        <li>Ma collection</li>
                     </a>
                     <a href="#">
-                        <li>About</li>
+                        <li>Classement</li>
+                    </a>
+                    <a href="login.php">
+                        <li>Se connecter</li>
                     </a>
                     <a href="#">
-                        <li>Info</li>
-                    </a>
-                    <a href="#">
-                        <li>Contact</li>
-                    </a>
-                    <a href="https://erikterwan.com/" target="_blank">
-                        <li>Show me more</li>
+                        <li>Créer un compte</li>
                     </a>
                 </ul>
             </div>
