--- a/web/index.html
+++ b/web/index.html
@@ -1,59 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="en" >
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BIBYDEX</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+  <meta charset="UTF-8">
+  <title>BIBYdex</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/menu.css">
+
 </head>
-
 <body>
-    <div class="container">
-
-        <h1>BIBYDEX</h1>
-        <!--    Made by Erik Terwan    -->
-        <!--   24th of November 2015   -->
-        <!--        MIT License        -->
-        <nav role="navigation">
-            <div id="menuToggle">
-                <!--
-    A fake / hidden checkbox is used as click reciever,
-    so you can use the :checked selector on it.
-    -->
-                <input type="checkbox" />
-
-                <!--
-    Some spans to act as a hamburger.
     
-    They are acting like a real hamburger,
-    not that McDonalds stuff.
-    -->
-                <span></span>
-                <span></span>
-                <span></span>
+  <nav>
+    <ul>
+      <li><a href="./assets/db/ShowAllEspeces.php">Voir toutes les especes</a></li>
+      <li><a href="./login-page.php">Se connecter</a></li>
+      <li><a href="./CreateAccount-page.php">Creer un compte</a></li>
+    </ul>
+  </nav>
 
-                <!--
-    Too bad the menu has to be inside of the button
-    but hey, it's pure CSS magic.
-    -->
-                <ul id="menu">
-                    <a href="#">
-                        <li>Ma collection</li>
-                    </a>
-                    <a href="#">
-                        <li>Classement</li>
-                    </a>
-                    <a href="login.php">
-                        <li>Se connecter</li>
-                    </a>
-                    <a href="#">
-                        <li>Créer un compte</li>
-                    </a>
-                </ul>
-            </div>
-        </nav>
+  <!-- partial:index.partial.html -->
+  <canvas id="c"></canvas>
+  <!-- partial -->
+      
+  
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/animejs/1.0.0/anime.min.js'></script>
+  <script  src="./script.js"></script>
 
 </body>
-
 </html>
